--- a/src/main/resources/templates/authentication/login.html
+++ b/src/main/resources/templates/authentication/login.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link th:href="@{/static/css/main.css}" rel="stylesheet" type="text/css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>learn-jvm</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <div>
-        <!--/*@thymesVar id="login" type="com.kamegatze.learnjvm.model.authentication.Login"*/-->
-        <form action="#" th:action="@{/authentication/processing}" th:object="${login}" method="post">
-            <label>
-                <div>
-                    Имя пользователя:
+    <div class="flex-box">
+        <div class="row container">
+            <div class="col s2"></div>
+            <!--/*@thymesVar id="login" type="com.kamegatze.learnjvm.model.authentication.Login"*/-->
+            <form class="col s8" action="#" th:action="@{/authentication/processing}" th:object="${login}" method="post">
+                <div class="row col s12">
+                    <div class="input-field col s12">
+                        <input class="validate" id="login" type="text" th:field="*{username}">
+                        <label for="login">Имя пользователя</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <input class="validate" id="password" type="password" th:field="*{password}">
+                        <label for="password">Пароль</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <button class="btn waves-effect waves-light" type="submit">
+                            <i class="material-icons left">input</i>
+                            Войти
+                        </button>
+                        <a class="btn waves-effect waves-light" th:href="@{/authentication/register}">
+                            <i class="material-icons left">add_circle</i>
+                            Зарегистрироваться
+                        </a>
+                    </div>
                 </div>
-                <input type="text" th:field="*{username}">
-            </label>
-            <label>
-                <div>
-                    Пароль:
-                </div>
-                <input type="password" th:field="*{password}">
-            </label>
-            <br>
-            <button type="submit">Войти</button>
-        </form>
+            </form>
+            <div class="col s2"></div>
+        </div>
     </div>
 </body>
 </html>
