--- a/src/main/resources/templates/authentication/registration.html
+++ b/src/main/resources/templates/authentication/registration.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link th:href="@{/static/css/main.css}" rel="stylesheet" type="text/css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <th:block th:replace="~{fragments/links :: links}"></th:block>
     <meta charset="UTF-8">
     <title>Registration</title>
 </head>
