--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -6,9 +6,34 @@
     align-items: center;
 }
 
+.button-merges-background {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
 
 .d-flex {
     display: flex;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.aligns-items-center {
+    align-items: center;
+}
+
+.dropdown-content li > a, .dropdown-content li > span, .dropdown-content li > form > button {
+    font-size: 16px;
+    color: #26a69a;
+    display: block;
+    line-height: 22px;
+    padding: 14px 16px;
 }
 
 nav .brand-logo {
@@ -24,6 +49,10 @@ nav .brand-logo {
 
 .page-content {
     flex-grow: 1;
+}
+
+.w-100 {
+    width: 100%;
 }
 
 .m-0 {
