--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -8,8 +8,25 @@
 <body>
 <div class="page">
     <th:block th:replace="~{fragments/header :: header}"></th:block>
-    <div class="page-content">
-        dwdawdawdwad
+    <div class="page-content justify-content-center">
+        <!--/*@thymesVar id="articles" type="java.util.List<com.kamegatze.learnjvm.model.db.articles.Article>"*/-->
+        <th:block th:each="article, item : ${articles}">
+            <div class="row container">
+                <div class="col s3"></div>
+                <div class="col s6">
+                    <div class="card">
+                        <div class="card-content">
+                            <span class="card-title" th:text="${article.label}"></span>
+                            <p th:text="${article.chapters.get(0).content}"></p>
+                        </div>
+                        <div class="card-action">
+                            <a class="btn waves-effect waves-light" th:href="@{/articles/view/{id}(id=${article.id})}">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s3"></div>
+            </div>
+        </th:block>
     </div>
     <th:block th:replace="~{fragments/footer :: footer}"></th:block>
 </div>
