шimprovement create article function

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -28,6 +28,18 @@
     align-items: center;
 }
 
+.flex-box-order-first {
+    order: -1;
+}
+
+.article {
+    width: 120rem;
+}
+
+.dropdown-content {
+    min-width: 130px;
+}
+
 .dropdown-content li > a, .dropdown-content li > span, .dropdown-content li > form > button {
     font-size: 16px;
     color: #26a69a;
@@ -53,6 +65,10 @@ nav .brand-logo {
 
 .w-100 {
     width: 100%;
+}
+
+.h-100 {
+    height: 100%;
 }
 
 .m-0 {
