--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,8 +23,8 @@
         <li><a th:href="@{/account/page_info}">account</a></li>
         <li><a th:href="@{/articles/create}">create article</a> </li>
         <li>
-            <form class="d-flex justify-content-center" th:action="@{/logout}" method="post">
-                <button class="button-merges-background w-100" type="submit">exit</button>
+            <form th:action="@{/logout}" method="post">
+                <button class="left-align button-merges-background w-100" type="submit">exit</button>
             </form>
         </li>
     </ul>
