--- a/src/main/resources/templates/articles/view.html
+++ b/src/main/resources/templates/articles/view.html
@@ -8,7 +8,7 @@
 <body>
     <div class="page">
         <th:block th:replace="~{fragments/header :: header}"></th:block>
-        <!--/*@thymesVar id="article" type="com.kamegatze.learnjvm.model.db.articles.Article"*/-->
+        <!--/*@thymesVar id="article" type="com.kamegatze.learnjvm.model.articles.Article"*/-->
         <div class="page-content">
             <article class="row h-100 article">
                 <div class="col s4"></div>
