--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,7 +21,7 @@
 
     <ul id="account-dropdown" class="dropdown-content">
         <li><a th:href="@{/account/page_info}">account</a></li>
-        <li><a th:href="@{/articles/create}">create article</a> </li>
+        <li><a th:href="@{/articles/all-articles-by-user}">my articles</a> </li>
         <li>
             <form th:action="@{/logout}" method="post">
                 <button class="left-align button-merges-background w-100" type="submit">exit</button>
