--- a/src/main/resources/templates/articles/form-chapters.html
+++ b/src/main/resources/templates/articles/form-chapters.html
@@ -1,4 +1,4 @@
-<!--/*@thymesVar id="article" type="com.kamegatze.learnjvm.model.db.articles.Article"*/-->
+<!--/*@thymesVar id="article" type="com.kamegatze.learnjvm.model.articles.Article"*/-->
 <th:block th:each="chapter, item : *{article.chapters}">
     <div class="row">
         <div class="col s11">
